(nocheck) refactor: Cải tiến cấu trúc Beatmap và HitObject
- Thêm struct `Stats` trong `beatmap.h` để quản lý thống kê liên quan đến beatmap (tổng số floor, slider, combo).
- Cập nhật các lớp `HitObject` và `Slider` với các struct `Action` mới để cải thiện cơ chế gameplay.
- Thay đổi phương thức `get_score` trong `metadata.h` để bao gồm các tham số hướng, cho phép tính điểm tinh vi hơn.
- Cập nhật `timing.h` sử dụng `int64_t` cho thời gian, cải thiện độ chính xác.
- Thay thế `utilities.h` bằng `utilities.hpp`, bao gồm các hàm tiện ích cho toán học, chuỗi và xử lý container.
- Thêm các phương thức trong lớp `Beatmap` để tạo hàng đợi hành động và lặp qua các đối tượng hit, cải thiện logic gameplay và quy trình render.
- Cập nhật các tệp khác để thay thế `utilities.h` bằng `utilities.hpp`, đảm bảo tính nhất quán trong việc sử dụng tệp tiêu đề.
- Điều chỉnh các tệp dự án để phản ánh những thay đổi này, bao gồm cập nhật đường dẫn và cài đặt dự án.

--- a/the-floor-is-rhythm.vcxproj
+++ b/the-floor-is-rhythm.vcxproj
@@ -134,12 +134,16 @@
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+      <BrowseInformation>true</BrowseInformation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>SDL3_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <Bscmake>
+      <PreserveSbr>true</PreserveSbr>
+    </Bscmake>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -187,7 +191,7 @@
     <ClInclude Include="include\structures\screens\gameplay\playing.h" />
     <ClInclude Include="include\structures\screens\screen.h" />
     <ClInclude Include="include\structures\types.h" />
-    <ClInclude Include="include\utilities.h" />
+    <ClInclude Include="include\utilities.hpp" />
     <ClInclude Include="include\work\core.h" />
     <ClInclude Include="include\work\render.h" />
     <ClInclude Include="include\work\render\layers.h" />
