feat: Cập nhật Audio và thêm callback action evnet
- Cập nhật `.gitmodules` để thêm submodule cho easing functions.
- Thay đổi `workspace.xml` với các cài đặt dự án mới.
- Tạo file `dependencies.props` để định nghĩa đường dẫn cho các phụ thuộc mới (SDL_mixer, osu-parser, easing).
- Cập nhật submodule `osu-parser` lên commit mới.
- Thay đổi kiểu `MAX_CHANNELS` trong `config.h` từ `int32_t` sang `uint8_t` và đổi tên các hằng số liên quan.
- Xóa `action.h` và thay thế bằng các cấu trúc mới trong `callback.h`.
- Tạo mới các file `input.h`, `time.h`, `callback.cpp`, `render.cpp`, và `time.cpp` để quản lý các sự kiện và thời gian.
- Cập nhật các file `buses.h`, `memory.h`, `mixer.h`, `layer.h`, `playing.h`, `screen.h`, `utilities.hpp`, `core.h`, `main.cpp`, `action.cpp`, `buses.cpp`, `memory.cpp`, `mixer.cpp`, `layer.cpp`, `cursor.cpp`, và `screen.cpp` để cải thiện cấu trúc và chức năng.
- Cập nhật `the-floor-is-rhythm.vcxproj` và `the-floor-is-rhythm.vcxproj.filters` để phản ánh cấu trúc mới của các file nguồn và tiêu đề.

Ghi chú: Các thay đổi này giúp cải thiện khả năng quản lý mã nguồn và mở rộng dự án.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "dependencies/SDL_mixer-build"]
 	path = dependencies/SDL_mixer-build
 	url = https://github.com/thnhmai06/SDL_mixer-build.git
+[submodule "dependencies/easing"]
+	path = dependencies/easing
+	url = https://github.com/nicolausYes/easing-functions.git
